fix (teaserlisting template): the image alignment for the vertical images

--- a/frontend/src/components/Blocks/Listing/less/TeaserListingSecondTemplate.less
+++ b/frontend/src/components/Blocks/Listing/less/TeaserListingSecondTemplate.less
@@ -1,6 +1,14 @@
 #page-document,
 #page-edit {
   .TeaserListingSecondTemplate {
+    .listing-image-album {
+      .imagethumb {
+        @media (min-width: 992px) {
+          display: flex;
+          justify-content: end;
+        }
+      }
+    }
     height: auto;
     padding-top: 17px;
     padding-right: 15px !important;
