--- a/frontend/src/components/Blocks/Listing/less/TeaserListingTemplate.less
+++ b/frontend/src/components/Blocks/Listing/less/TeaserListingTemplate.less
@@ -1,6 +1,14 @@
 #page-document,
 #page-edit {
   .TeaserListingTemplate {
+    .listing-image-album {
+      .imagethumb {
+        @media (min-width: 992px) {
+          display: flex;
+          justify-content: end;
+        }
+      }
+    }
     .buttomline {
       display: none;
     }
